[package]
name = "puremark-rs"
version = "0.1.0"
authors = ["Yuichi Sugiyama <yuichi.sugiyama176@gmail.com>"]
description = "A markdown parser written in Rust"
license = "MIT"
repository = "https://github.com/yuichi176/puremark-rs"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.100"
